# bwa-mem2-distributed

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/Modules/: ConfigureBwa.cmake
CMake/Templates/: Bwa.CMakeLists.txt.cmake
